--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,21 @@ logs/
 
 .files/
 .n8n/
+
+*.tfstate
+*.tfstate.backup
+
+.terraform.lock.hcl
+
+.terraform/
+
+*.tfvars
+*.tfvars.json
+
+.env
+.env.*
+
+*service-account*.json
+
+*.override.tf
+*.override.tf.json
