--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,51 +1,34 @@
-name: Deploy Whatlas API
-
-on:
-  push:
-    branches: [dev]
-
-env:
-  PROJECT_ID: maximal-backup-463214-j1
-  REGION: southamerica-east1
-  REPOSITORY: whatlas-repo
-  IMAGE_NAME: whatlas-api
-  TF_VERSION: 1.7.4
-
 jobs:
-  deploy:
-    name: Build and Deploy
+  build-and-deploy:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
+      - name: Checkout
+        uses: actions/checkout@v3
 
-      - name: Authenticate with Google Cloud (SA Key)
+      - name: Setup Docker Buildx
+        uses: docker/setup-buildx-action@v2
+
+      - name: Authenticate with Google Cloud
         uses: google-github-actions/auth@v2
         with:
-          credentials_json: ${{ secrets.GCP_SA_KEY }}
+          credentials_json: '${{ secrets.GCP_SA_KEY }}'
 
       - name: Configure Docker for Artifact Registry
-        run: gcloud auth configure-docker $REGION-docker.pkg.dev
+        run: |
+          gcloud auth configure-docker southamerica-east1-docker.pkg.dev
 
       - name: Build and Push Docker image
         run: |
-          export IMAGE_TAG=$(date +%s)
-          echo "IMAGE_TAG=$IMAGE_TAG" >> $GITHUB_ENV
-          docker build -t $REGION-docker.pkg.dev/$PROJECT_ID/$REPOSITORY/$IMAGE_NAME:$IMAGE_TAG .
-          docker push $REGION-docker.pkg.dev/$PROJECT_ID/$REPOSITORY/$IMAGE_NAME:$IMAGE_TAG
-
-      - name: Set up Terraform
-        uses: hashicorp/setup-terraform@v3
-        with:
-          terraform_version: ${{ env.TF_VERSION }}
-
-      - name: Terraform Init
-        run: terraform init
+          docker buildx build \
+            --platform linux/amd64 \
+            --push \
+            -t southamerica-east1-docker.pkg.dev/maximal-backup-463214-j1/whatlas-repo/whatlas-api:${{ github.sha }} \
+            .
 
       - name: Terraform Apply
         run: |
+          cd infra
+          terraform init
           terraform apply -auto-approve \
-            -var="project_id=$PROJECT_ID" \
-            -var="region=$REGION" \
-            -var="image_tag=$IMAGE_TAG"
+            -var="image_tag=${{ github.sha }}"
