--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,3 +1,16 @@
+name: Deploy Whatlas API
+
+on:
+  push:
+    branches: [dev]
+
+env:
+  PROJECT_ID: maximal-backup-463214-j1
+  REGION: southamerica-east1
+  REPOSITORY: whatlas-repo
+  IMAGE_NAME: whatlas-api
+  TF_VERSION: 1.7.4
+
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
@@ -32,3 +45,4 @@ jobs:
           terraform init
           terraform apply -auto-approve \
             -var="image_tag=${{ github.sha }}"
+
