--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,7 +25,7 @@ jobs:
       - name: Authenticate with Google Cloud
         uses: google-github-actions/auth@v2
         with:
-          credentials_json: '${{ secrets.GCP_SA_KEY }}'
+          credentials_json: "${{ secrets.GCP_SA_KEY }}"
 
       - name: Configure Docker for Artifact Registry
         run: |
@@ -42,12 +42,13 @@ jobs:
       - name: Setup Terraform
         uses: hashicorp/setup-terraform@v3
         with:
-         terraform_version: 1.12.2
+          terraform_version: 1.12.2
 
       - name: Terraform Apply
+        env:
+          TF_VAR_gcp_sa_key_json: ${{ secrets.GCP_SA_KEY }}
         run: |
           cd whatlas-infra
           terraform init
           terraform apply -auto-approve \
             -var="image_tag=${{ github.sha }}"
-
