--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-name: Deploy Whatlas API
+name: Deploy Whatlas
 
 on:
   push:
@@ -12,8 +12,9 @@ env:
   TF_VERSION: 1.7.4
 
 jobs:
-  build-and-deploy:
+  build-and-deploy-api:
     runs-on: ubuntu-latest
+    name: Build and Deploy API
 
     steps:
       - name: Checkout
@@ -36,21 +37,67 @@ jobs:
           docker buildx build \
             --platform linux/amd64 \
             --push \
-            -t southamerica-east1-docker.pkg.dev/maximal-backup-463214-j1/whatlas-repo/whatlas-api:${{ github.sha }} \
+            -t southamerica-east1-docker.pkg.dev/${{ env.PROJECT_ID }}/${{ env.REPOSITORY }}/${{ env.IMAGE_NAME }}:${{ github.sha }} \
             .
+
+  deploy-infra-core:
+    runs-on: ubuntu-latest
+    name: Deploy Infra (Core)
+    if: |
+      github.event_name == 'push' &&
+      contains(github.event.head_commit.message, '[infra-core]')
+
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
 
       - name: Setup Terraform
         uses: hashicorp/setup-terraform@v3
         with:
-          terraform_version: 1.12.2
+          terraform_version: ${{ env.TF_VERSION }}
 
-      - name: Terraform Apply
+      - name: Authenticate with Google Cloud
+        uses: google-github-actions/auth@v2
+        with:
+          credentials_json: "${{ secrets.GCP_SA_KEY }}"
+
+      - name: Terraform Apply (Core)
+        env:
+          TF_VAR_project_id: ${{ env.PROJECT_ID }}
+          TF_VAR_gcp_sa_key_json: ${{ secrets.GCP_SA_KEY }}
+        run: |
+          cd whatlas-infra/infra-core
+          terraform init
+          terraform apply -auto-approve
+
+  deploy-infra-app:
+    runs-on: ubuntu-latest
+    name: Deploy Infra (App)
+    if: |
+      github.event_name == 'push' &&
+      contains(github.event.head_commit.message, '[infra-app]')
+
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+
+      - name: Setup Terraform
+        uses: hashicorp/setup-terraform@v3
+        with:
+          terraform_version: ${{ env.TF_VERSION }}
+
+      - name: Authenticate with Google Cloud
+        uses: google-github-actions/auth@v2
+        with:
+          credentials_json: "${{ secrets.GCP_SA_KEY }}"
+
+      - name: Terraform Apply (App)
         env:
           TF_VAR_project_id: ${{ env.PROJECT_ID }}
           TF_VAR_cloud_run_service_account_email: ${{ env.CLOUD_RUN_SERVICE_ACCOUNT_EMAIL }}
           TF_VAR_gcp_sa_key_json: ${{ secrets.GCP_SA_KEY }}
+          TF_VAR_image_tag: ${{ github.sha }}
         run: |
-          cd whatlas-infra
+          cd whatlas-infra/infra-app
           terraform init
-          terraform apply -auto-approve \
-            -var="image_tag=${{ github.sha }}"
+          terraform apply -auto-approve
