--- a/.github/workflows/deploy-infra-core.yml
+++ b/.github/workflows/deploy-infra-core.yml
@@ -3,6 +3,8 @@ name: Deploy API
 on:
   push:
     branches: [dev]
+    paths:
+      - 'infra/**'
 
 env:
   REGION: southamerica-east1
@@ -11,34 +13,6 @@ env:
   TF_VERSION: 1.12.2
 
 jobs:
-  build-and-deploy-api:
-    runs-on: ubuntu-latest
-    name: Build and Deploy API
-
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v3
-
-      - name: Setup Docker Buildx
-        uses: docker/setup-buildx-action@v2
-
-      - name: Authenticate with Google Cloud
-        uses: google-github-actions/auth@v2
-        with:
-          credentials_json: "${{ secrets.GCP_SA_KEY }}"
-
-      - name: Configure Docker for Artifact Registry
-        run: |
-          gcloud auth configure-docker southamerica-east1-docker.pkg.dev
-
-      - name: Build and Push Docker image
-        run: |
-          docker buildx build \
-            --platform linux/amd64 \
-            --push \
-            -t southamerica-east1-docker.pkg.dev/${{ secrets.PROJECT_ID }}/${{ env.REPOSITORY }}/${{ env.IMAGE_NAME }}:${{ github.sha }} \
-            .
-
   deploy-infra-core:
     runs-on: ubuntu-latest
     name: Deploy Infra (Core)
