--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "fastq": "^1.19.1",
     "find-my-way": "^9.3.0",
     "firebase-admin": "^13.4.0",
+    "firebase-functions": "^6.3.2",
     "foreground-child": "^3.3.1",
     "get-tsconfig": "^4.10.1",
     "glob": "^11.0.3",
