--- a/.github/workflows/deploy-infra-core.yml
+++ b/.github/workflows/deploy-infra-core.yml
@@ -37,6 +37,7 @@ jobs:
       - name: Terraform Apply (Core)
         env:
           TF_VAR_project_id: ${{ secrets.PROJECT_ID }}
+          TF_VAR_cloud_run_service_account_email: ${{ secrets.CLOUD_RUN_SERVICE_ACCOUNT_EMAIL }}
           TF_VAR_gcp_sa_key_json: ${{ secrets.GCP_SA_KEY }}
         run: |
           cd infra/infra-core
