--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "avvio": "^9.1.0",
     "awilix": "^12.0.5",
     "axios": "^1.10.0",
+    "cheerio": "^1.1.0",
     "color-convert": "^2.0.1",
     "color-name": "^1.1.4",
     "content-disposition": "^0.5.4",
