--- a/.github/workflows/deploy-app.yml
+++ b/.github/workflows/deploy-app.yml
@@ -39,13 +39,16 @@ jobs:
             -t southamerica-east1-docker.pkg.dev/${{ secrets.PROJECT_ID }}/${{ env.REPOSITORY }}/${{ env.IMAGE_NAME }}:${{ github.sha }} \
             .
 
+      - name: Write SA Key to file
+        run: echo "${{ secrets.GCP_SA_KEY }}" > /tmp/key.json
+        
       - name: Deploy to Cloud Run
         run: |
           gcloud run deploy whatlas-api \
             --image=southamerica-east1-docker.pkg.dev/${{ secrets.PROJECT_ID }}/${{ env.REPOSITORY }}/${{ env.IMAGE_NAME }}:${{ github.sha }} \
             --region=${{ env.REGION }} \
             --platform=managed \
-            --set-env-vars NODE_ENV=production,SPTRANS_TOKEN=${{ secrets.SPTRANS_TOKEN }},GOOGLE_API_KEY=${{ secrets.GOOGLE_API_KEY }}, GOOGLE_APPLICATION_CREDENTIALS_JSON=${{ secrets.GCP_SA_KEY }} \
+            --set-env-vars NODE_ENV=production,SPTRANS_TOKEN=${{ secrets.SPTRANS_TOKEN }},GOOGLE_API_KEY=${{ secrets.GOOGLE_API_KEY }} \
             --quiet \
             --allow-unauthenticated \
             --service-account=whatlas-infra-terraform@${{ secrets.PROJECT_ID }}.iam.gserviceaccount.com
