--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "minimatch": "^10.0.3",
     "minipass": "^7.1.2",
     "ms": "^2.1.3",
+    "natural": "^8.1.0",
     "on-exit-leak-free": "^2.1.2",
     "openapi-types": "^12.1.3",
     "package-json-from-dist": "^1.0.1",
@@ -98,6 +99,7 @@
     "thread-stream": "^3.1.0",
     "toad-cache": "^3.7.0",
     "toidentifier": "^1.0.1",
+    "ts-node": "^10.9.2",
     "tsx": "^4.20.3",
     "typescript": "^5.8.3",
     "undici-types": "^7.8.0",
