--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@fastify/cors": "^11.0.1",
     "@fastify/env": "^5.0.2",
     "@fastify/swagger-ui": "^5.2.3",
+    "@supabase/supabase-js": "^2.50.2",
     "@types/node": "^24.0.3",
     "abstract-logging": "^2.0.1",
     "ajv": "^8.17.1",
@@ -128,6 +129,7 @@
   },
   "homepage": "https://github.com/arimayuji/whatlas#readme",
   "devDependencies": {
-    "@tsconfig/node24": "^24.0.1"
+    "@tsconfig/node24": "^24.0.1",
+    "supabase": "^2.26.9"
   }
 }
