--- a/package.json
+++ b/package.json
@@ -131,6 +131,12 @@
   "homepage": "https://github.com/arimayuji/whatlas#readme",
   "devDependencies": {
     "@tsconfig/node24": "^24.0.1",
+    "@typescript-eslint/eslint-plugin": "^8.35.1",
+    "@typescript-eslint/parser": "^8.35.1",
+    "eslint": "^9.30.1",
+    "eslint-config-prettier": "^10.1.5",
+    "eslint-plugin-prettier": "^5.5.1",
+    "prettier": "^3.6.2",
     "supabase": "^2.26.9"
   }
 }
