--- a/package.json
+++ b/package.json
@@ -104,6 +104,7 @@
     "tsx": "^4.20.3",
     "typescript": "^5.8.3",
     "undici-types": "^7.8.0",
+    "uuid": "^11.1.0",
     "which": "^2.0.2",
     "wrap-ansi": "^8.1.0",
     "wrap-ansi-cjs": "^7.0.0",
