--- a/package.json
+++ b/package.json
@@ -118,6 +118,9 @@
     "start": "node dist/app.js",
     "dev": "tsx --watch src/app.ts"
   },
+  "jest": {
+    "rootDir": "./"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/arimayuji/whatlas.git"
@@ -134,6 +137,7 @@
     "@babel/core": "^7.28.0",
     "@babel/preset-env": "^7.28.0",
     "@babel/preset-typescript": "^7.27.1",
+    "@faker-js/faker": "^9.9.0",
     "@jest/globals": "^30.0.5",
     "@tsconfig/node24": "^24.0.1",
     "@typescript-eslint/eslint-plugin": "^8.35.1",
@@ -142,6 +146,7 @@
     "eslint": "^9.30.1",
     "eslint-config-prettier": "^10.1.5",
     "eslint-plugin-prettier": "^5.5.1",
+    "factory.ts": "^1.4.2",
     "jest": "^30.0.5",
     "prettier": "^3.6.2",
     "supabase": "^2.26.9",
