--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,6 +17,6 @@
     "skipLibCheck": true,
     "moduleResolution": "node16",
     "outDir": "dist",
-    "rootDir": "src",
+    "rootDir": "./",
   }
 }
